--- a/index.html
+++ b/index.html
@@ -2,249 +2,87 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-
-<!-- Favicon -->
-<link rel="icon" type="image/png" href="favicon.png">
-<link rel="manifest" href="manifest.json">
-
-<script>
-(function(){
-  if(window.document && window.document.documentMode){
-    window.location.replace("ie.html");
-  }
-})();
-</script>
-
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#1a73e8">
 
 <style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
 body{
-  background:
-    url('Santa.png') left center / 50% 100vh no-repeat,
-    url('Santa.png') right center / 50% 100vh no-repeat;
-}
-@media (max-width:768px){
-  body{background:url('Santa.png') center center / cover no-repeat;}
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:#121212;
+  color:white;
 }
 
-#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-
-.logo{
-  font-size:clamp(48px,10vw,80px);
+header{
+  background:#ff0000;
+  padding:12px 15px;
+  font-size:22px;
   font-weight:bold;
-  display:inline-flex;
 }
 
-.logo span:nth-child(1){color:#4285f4}
-.logo span:nth-child(2){color:#ff9800}
-.logo span:nth-child(3){color:#fbbc05}
-.logo span:nth-child(4){color:#4285f4}
-.logo span:nth-child(5){color:#34a853}
-.logo span:nth-child(6){color:#ff9800}
-.logo span:nth-child(7){color:#fbbc05}
-.logo span:nth-child(8){color:#4285f4}
-.logo span:nth-child(9){color:#34a853}
-
-.search-box{max-width:580px;width:90%;padding:0 16px;}
-input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
-
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
-.back{cursor:pointer;font-size:22px;}
-
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-
-.card{
-  background:#fff;
-  border-radius:12px;
-  padding:14px 16px;
-  margin:12px 0;
-  cursor:pointer;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-  color:#000;
-  text-decoration:none;
-  display:flex;
-  flex-direction:column;
-  gap:6px;
+#searchBox{
+  padding:10px;
 }
 
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:12px;
-}
-.grid img{
+input{
   width:100%;
-  aspect-ratio:16/9;
-  object-fit:cover;
-  border-radius:8px;
+  padding:12px;
+  font-size:16px;
+  border:none;
+  border-radius:10px;
+  outline:none;
 }
 
-/* Kill Google shell UI */
-.gsc-tabsArea,
-.gsc-above-wrapper-area,
-.gsc-refinementsArea,
-.gcsc-branding,
-.gsc-adBlock,
-.gsc-result-info{
-  display:none !important;
-}
-
-.gs-webResult.gs-result{
-  background:#fff;
-  border-radius:12px;
-  padding:14px 16px;
-  margin:12px 0;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
+#content{
+  padding:10px;
 }
 </style>
+
+<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+
 </head>
 
 <body>
 
-<div id="home">
-  <div class="logo">
-    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
-    <span>h</span><span>m</span><span>a</span><span>s</span>
-  </div>
+<header>Searchmas</header>
 
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
+<div id="searchBox">
+  <input id="q" placeholder="Search..." onkeydown="if(event.key==='Enter')go()">
 </div>
 
-<div id="results">
-  <div class="topbar">
-    <div class="back" onclick="goHome()">⬅</div>
-    <input id="qTop">
-  </div>
-
-  <div class="tabs">
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
-    <div class="tab" data-tab="flights">Flights</div>
-  </div>
-
-  <div id="content"></div>
+<div id="content">
+  <div class="gcse-searchresults-only"></div>
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+const input = document.getElementById("q");
 
-let tab="all";
-const homeEl=document.getElementById("home");
-const resEl=document.getElementById("results");
-const qHome=document.getElementById("qHome");
-const qTop=document.getElementById("qTop");
-const content=document.getElementById("content");
+const params = new URLSearchParams(location.search);
+const query = params.get("q");
 
-function startSearch(e){
-  e.preventDefault();
-  const q=qHome.value.trim();
+if(query){
+  input.value = query;
+  run(query);
+}
+
+function go(){
+  const q = input.value.trim();
   if(!q) return;
-  history.pushState({}, "", "?q="+encodeURIComponent(q));
-  showResults(q);
+  history.replaceState(null,"","?q="+encodeURIComponent(q));
+  run(q);
 }
 
-qTop.onkeydown=e=>{
-  if(e.key==="Enter"){
-    e.preventDefault();
-    const q=qTop.value.trim();
-    if(!q) return;
-    history.pushState({}, "", "?q="+encodeURIComponent(q));
-    search();
-  }
-};
-
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    search();
-  };
-});
-
-function showResults(q){
-  homeEl.style.display="none";
-  resEl.style.display="block";
-  qTop.value=q;
-  search();
-}
-
-function goHome(){
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display="none";
-  homeEl.style.display="flex";
-}
-
-function search(){
-  const q=qTop.value.trim();
-  if(!q) return;
-  const enc=encodeURIComponent(q);
-  content.innerHTML="<p>Loading results...</p>";
-
-  if(tab==="all"){
-    content.innerHTML = `<div class="gcse-searchresults-only"></div>`;
-
-    if(!window.__gcsLoaded){
-      window.__gcsLoaded=true;
-      const s=document.createElement("script");
-      s.async=true;
-      s.src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60";
-      document.body.appendChild(s);
+function run(q){
+  function wait(){
+    if(window.google && google.search && google.search.cse){
+      const el = google.search.cse.element.getElement("searchresults-only0");
+      if(el) el.execute(q);
+      else setTimeout(wait,150);
+    }else{
+      setTimeout(wait,150);
     }
-    runGoogle(q);
   }
-
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-    });
-  }
-
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`
-          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-            <img src="${v.snippet.thumbnails.high.url}">
-          </a>`).join("")}</div>`;
-      });
-  }
-
-  if(tab==="news"){
-    content.innerHTML=
-      `<a class="card" href="https://news.google.com/search?q=${enc}" target="_blank">Google News</a>`+
-      `<a class="card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">Bing News</a>`;
-  }
-
-  if(tab==="flights"){
-    content.innerHTML=`<a class="card" href="https://www.flightradar24.com" target="_blank">Flightradar24</a>`;
-  }
-}
-
-function runGoogle(q){
-  if(window.google && google.search && google.search.cse){
-    const el=google.search.cse.element.getElement('searchresults-only0');
-    if(el) el.execute(q);
-    else setTimeout(()=>runGoogle(q),200);
-  }else{
-    setTimeout(()=>runGoogle(q),200);
-  }
+  wait();
 }
 </script>
 
