--- a/index.html
+++ b/index.html
@@ -2,83 +2,238 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="manifest" href="manifest.json">
+
+<script>
+(function(){
+  if(window.document && window.document.documentMode){
+    window.location.replace("ie.html");
+  }
+})();
+</script>
+
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#1a73e8">
 
 <style>
+html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
 body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#121212;
-  color:white;
+  background:
+    url('Santa.png') left center / 50% 100vh no-repeat,
+    url('Santa.png') right center / 50% 100vh no-repeat;
+}
+@media (max-width:768px){
+  body{background:url('Santa.png') center center / cover no-repeat;}
 }
 
-header{
-  background:#ff0000;
-  padding:12px 15px;
-  font-size:22px;
+#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
+
+.logo{
+  font-size:clamp(48px,10vw,80px);
   font-weight:bold;
+  display:inline-flex;
+  line-height:1.1;
+}
+.logo span:nth-child(1){color:#4285f4}
+.logo span:nth-child(2){color:#ff9800}
+.logo span:nth-child(3){color:#fbbc05}
+.logo span:nth-child(4){color:#4285f4}
+.logo span:nth-child(5){color:#34a853}
+.logo span:nth-child(6){color:#ff9800}
+.logo span:nth-child(7){color:#fbbc05}
+.logo span:nth-child(8){color:#4285f4}
+.logo span:nth-child(9){color:#34a853}
+
+.search-box{max-width:580px;width:90%;padding:0 16px;}
+input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
+
+#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
+.topbar{display:flex;gap:12px;align-items:center;}
+.back{cursor:pointer;font-size:22px;}
+
+.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
+.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
+.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
+
+.card{
+  background:#fff;border-radius:12px;padding:14px 16px;margin:12px 0;
+  box-shadow:0 2px 6px rgba(0,0,0,.08);
+  color:#000;text-decoration:none;display:flex;flex-direction:column;gap:6px;
 }
 
-#searchBox{
-  padding:10px;
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:12px;
 }
-
-input{
+.grid img{
   width:100%;
-  padding:12px;
-  font-size:16px;
-  border:none;
-  border-radius:10px;
-  outline:none;
-}
-
-#content{
-  padding:10px;
+  aspect-ratio:16/9;
+  object-fit:cover;
+  border-radius:8px;
 }
 </style>
 
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
-
 </head>
 
 <body>
 
-<header>Searchmas</header>
-
-<div id="searchBox">
-  <input id="q" placeholder="Search..." onkeydown="if(event.key==='Enter')go()">
+<div id="home">
+  <div class="logo">
+    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
+    <span>h</span><span>m</span><span>a</span><span>s</span>
+  </div>
+  <form class="search-box" onsubmit="startSearch(event)">
+    <input id="qHome" placeholder="Search the web">
+  </form>
 </div>
 
-<div id="content">
-  <div class="gcse-searchresults-only"></div>
+<div id="results">
+  <div class="topbar">
+    <div class="back" onclick="goHome()">⬅</div>
+    <input id="qTop">
+  </div>
+
+  <div class="tabs">
+    <div class="tab active" data-tab="all">All</div>
+    <div class="tab" data-tab="images">Images</div>
+    <div class="tab" data-tab="videos">Videos</div>
+    <div class="tab" data-tab="news">News</div>
+    <div class="tab" data-tab="flights">Flights</div>
+  </div>
+
+  <div id="content"></div>
 </div>
 
 <script>
-const input = document.getElementById("q");
+const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
+const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
 
-const params = new URLSearchParams(location.search);
-const query = params.get("q");
+let tab="all";
 
-if(query){
-  input.value = query;
-  run(query);
-}
+const homeEl=document.getElementById("home");
+const resEl=document.getElementById("results");
+const qHome=document.getElementById("qHome");
+const qTop=document.getElementById("qTop");
+const content=document.getElementById("content");
 
-function go(){
-  const q = input.value.trim();
+const params=new URLSearchParams(location.search);
+const startQ=params.get("q");
+
+if(startQ && startQ.trim()) showResults(startQ);
+
+function startSearch(e){
+  e.preventDefault();
+  const q=qHome.value.trim();
   if(!q) return;
-  history.replaceState(null,"","?q="+encodeURIComponent(q));
-  run(q);
+  history.pushState({}, "", "?q="+encodeURIComponent(q));
+  showResults(q);
 }
 
-function run(q){
+qTop.onkeydown=e=>{
+  if(e.key==="Enter"){
+    e.preventDefault();
+    const q=qTop.value.trim();
+    if(!q) return;
+    history.pushState({}, "", "?q="+encodeURIComponent(q));
+    search();
+  }
+};
+
+document.querySelectorAll(".tab").forEach(t=>{
+  t.onclick=()=>{
+    tab=t.dataset.tab;
+    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+    t.classList.add("active");
+    search();
+  };
+});
+
+function showResults(q){
+  homeEl.style.display="none";
+  resEl.style.display="block";
+  qTop.value=q;
+  search();
+}
+
+function goHome(){
+  history.replaceState({}, "", location.pathname);
+  resEl.style.display="none";
+  homeEl.style.display="flex";
+}
+
+function search(){
+  const q=qTop.value.trim();
+  if(!q) return;
+  const enc=encodeURIComponent(q);
+  content.innerHTML="<p>Loading...</p>";
+
+  /* === ALL TAB (REAL GOOGLE SEARCH) === */
+  if(tab==="all"){
+    content.innerHTML='<div class="gcse-searchresults-only"></div>';
+    runGoogle(q);
+  }
+
+  /* === IMAGES TAB === */
+  if(tab==="images"){
+    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
+      headers:{Authorization:"Client-ID "+UNSPLASH}
+    })
+    .then(r=>r.json())
+    .then(d=>{
+      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
+    });
+  }
+
+  /* === VIDEOS TAB === */
+  if(tab==="videos"){
+    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
+      .then(r=>r.json())
+      .then(d=>{
+        content.innerHTML=`<div class="grid">${d.items.map(v=>`
+          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
+            <img src="${v.snippet.thumbnails.high.url}">
+          </a>`).join("")}</div>`;
+      });
+  }
+
+  /* === NEWS TAB === */
+  if(tab==="news"){
+    content.innerHTML=
+      `<a class="card" href="https://news.google.com/search?q=${enc}" target="_blank">Google News</a>
+       <a class="card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">Bing News</a>`;
+  }
+
+  /* === FLIGHTS TAB (REAL QUERY SEARCH) === */
+  if(tab==="flights"){
+    content.innerHTML=
+      `<a class="card" href="https://www.google.com/search?q=flight+${enc}" target="_blank">
+        Track flights for: <strong>${q}</strong>
+      </a>
+      <a class="card" href="https://flightaware.com/live/search/?query=${enc}" target="_blank">
+        FlightAware Search
+      </a>
+      <a class="card" href="https://www.radarbox.com/search?q=${enc}" target="_blank">
+        RadarBox Live Tracker
+      </a>`;
+  }
+}
+
+/* === GOOGLE ENGINE WAIT HANDLER === */
+function runGoogle(q){
+  let tries=0;
   function wait(){
+    tries++;
     if(window.google && google.search && google.search.cse){
-      const el = google.search.cse.element.getElement("searchresults-only0");
+      const el=google.search.cse.element.getElement("searchresults-only0");
       if(el) el.execute(q);
-      else setTimeout(wait,150);
-    }else{
+      else if(tries<80) setTimeout(wait,150);
+    }else if(tries<80){
       setTimeout(wait,150);
     }
   }
