--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ body{
   font-size:clamp(48px,10vw,80px);
   font-weight:bold;
   display:inline-flex;
-  line-height:1.1;
+  align-items:center;
 }
+
 .logo span:nth-child(1){color:#4285f4}
 .logo span:nth-child(2){color:#ff9800}
 .logo span:nth-child(3){color:#fbbc05}
@@ -52,27 +53,14 @@ body{
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
 
 #results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;}
+.topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
 .back{cursor:pointer;font-size:22px;}
 
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;flex-wrap:wrap;}
+.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
 .tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:12px;
-}
-.grid img{
-  width:100%;
-  aspect-ratio:16/9;
-  object-fit:cover;
-  border-radius:8px;
-}
 </style>
 
-<!-- GOOGLE CSE -->
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 </head>
@@ -120,7 +108,11 @@ const content=document.getElementById("content");
 const params=new URLSearchParams(location.search);
 const startQ=params.get("q");
 
-if(startQ && startQ.trim()) showResults(startQ);
+if(startQ){
+  showResults(startQ);
+}else{
+  history.replaceState({}, "", location.pathname);
+}
 
 function startSearch(e){
   e.preventDefault();
@@ -165,55 +157,56 @@ function goHome(){
 function search(){
   const q=qTop.value.trim();
   if(!q) return;
-  const enc=encodeURIComponent(q);
 
   if(tab==="all"){
-    content.innerHTML='<div class="gcse-searchresults-only"></div>';
-    runCSE(q);
+    content.innerHTML = `<div class="gcse-searchresults-only"></div>`;
+    runGoogle(q);
   }
 
   if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
+    fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=18`,{
       headers:{Authorization:"Client-ID "+UNSPLASH}
     })
     .then(r=>r.json())
     .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
+      content.innerHTML=`<div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:10px;">
+        ${d.results.map(i=>`<img src="${i.urls.regular}" style="width:100%;border-radius:8px">`).join("")}
+      </div>`;
     });
   }
 
   if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`
+    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${encodeURIComponent(q)}&key=${YT}`)
+    .then(r=>r.json())
+    .then(d=>{
+      content.innerHTML=`<div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:12px;">
+        ${d.items.map(v=>`
           <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-            <img src="${v.snippet.thumbnails.high.url}">
-          </a>`).join("")}</div>`;
-      });
+            <img src="${v.snippet.thumbnails.high.url}" style="width:100%;border-radius:8px">
+          </a>`).join("")}
+      </div>`;
+    });
   }
 
   if(tab==="news"){
-    content.innerHTML=
-      `<a class="card" href="https://news.google.com/search?q=${enc}" target="_blank">Google News</a>
-       <a class="card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">Bing News</a>`;
+    content.innerHTML=`
+      <a href="https://news.google.com/search?q=${encodeURIComponent(q)}" target="_blank">Google News</a><br>
+      <a href="https://www.bing.com/news/search?q=${encodeURIComponent(q)}" target="_blank">Bing News</a>
+    `;
   }
 }
 
-/* Google CSE execution */
-function runCSE(q){
+function runGoogle(q){
   let tries=0;
-  function wait(){
+  const t=setInterval(()=>{
     tries++;
     if(window.google && google.search && google.search.cse){
+      clearInterval(t);
       const el=google.search.cse.element.getElement("searchresults-only0");
       if(el) el.execute(q);
-      else if(tries<80) setTimeout(wait,150);
-    } else if(tries<80) {
-      setTimeout(wait,150);
     }
-  }
-  wait();
+    if(tries>80) clearInterval(t);
+  },150);
 }
 </script>
 
