--- a/index.html
+++ b/index.html
@@ -17,26 +17,35 @@
 
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#1a73e8">
+<meta name="theme-color" content="#339933">
 
 <style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
+html,body{
+  margin:0;
+  padding:0;
+  height:100%;
+  font-family:Arial,sans-serif;
+}
+
 body{
   background:
     url('Santa.png') left center / 50% 100vh no-repeat,
     url('Santa.png') right center / 50% 100vh no-repeat;
 }
-@media (max-width:768px){
-  body{background:url('Santa.png') center center / cover no-repeat;}
-}
 
-#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
+/* HOME */
+
+#home{
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
 
 .logo{
   font-size:clamp(48px,10vw,80px);
   font-weight:bold;
-  display:inline-flex;
-  align-items:center;
 }
 
 .logo span:nth-child(1){color:#4285f4}
@@ -50,19 +59,67 @@ body{
 .logo span:nth-child(9){color:#34a853}
 
 .search-box{max-width:580px;width:90%;padding:0 16px;}
-input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
+input{
+  width:100%;
+  padding:14px 20px;
+  font-size:18px;
+  border-radius:24px;
+  border:1px solid #dfe1e5;
+}
 
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
-.back{cursor:pointer;font-size:22px;}
+/* RESULTS */
 
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
+#results{
+  display:none;
+  min-height:100vh;
+  background:#339933;
+  color:white;
+}
+
+.topbar{
+  display:flex;
+  gap:10px;
+  padding:10px;
+}
+
+.topbar input{
+  flex:1;
+}
+
+.back{
+  cursor:pointer;
+  font-size:22px;
+}
+
+/* GOOGLE RESULT SKIN */
+
+.gsc-control-cse{
+  background:#339933 !important;
+  border:none !important;
+}
+
+.gsc-result,
+.gsc-webResult{
+  background:#2b7f2b !important;
+  border-radius:12px !important;
+  margin:10px 0 !important;
+  padding:12px !important;
+}
+
+.gsc-title{
+  color:#fff !important;
+}
+
+.gs-snippet{
+  color:#d0ffd0 !important;
+}
+
+.gsc-url-top{
+  color:#9cff9c !important;
+}
 </style>
 
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
-
 </head>
 
 <body>
@@ -82,36 +139,20 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
     <div class="back" onclick="goHome()">⬅</div>
     <input id="qTop">
   </div>
-
-  <div class="tabs">
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
-  </div>
-
-  <div id="content"></div>
+  <div class="gcse-searchresults-only"></div>
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-
-let tab="all";
-
 const homeEl=document.getElementById("home");
 const resEl=document.getElementById("results");
 const qHome=document.getElementById("qHome");
 const qTop=document.getElementById("qTop");
-const content=document.getElementById("content");
 
 const params=new URLSearchParams(location.search);
 const startQ=params.get("q");
 
 if(startQ){
   showResults(startQ);
-}else{
-  history.replaceState({}, "", location.pathname);
 }
 
 function startSearch(e){
@@ -128,24 +169,15 @@ qTop.onkeydown=e=>{
     const q=qTop.value.trim();
     if(!q) return;
     history.pushState({}, "", "?q="+encodeURIComponent(q));
-    search();
+    run(q);
   }
 };
-
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    search();
-  };
-});
 
 function showResults(q){
   homeEl.style.display="none";
   resEl.style.display="block";
   qTop.value=q;
-  search();
+  run(q);
 }
 
 function goHome(){
@@ -154,49 +186,7 @@ function goHome(){
   homeEl.style.display="flex";
 }
 
-function search(){
-  const q=qTop.value.trim();
-  if(!q) return;
-
-  if(tab==="all"){
-    content.innerHTML = `<div class="gcse-searchresults-only"></div>`;
-    runGoogle(q);
-  }
-
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:10px;">
-        ${d.results.map(i=>`<img src="${i.urls.regular}" style="width:100%;border-radius:8px">`).join("")}
-      </div>`;
-    });
-  }
-
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${encodeURIComponent(q)}&key=${YT}`)
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:12px;">
-        ${d.items.map(v=>`
-          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-            <img src="${v.snippet.thumbnails.high.url}" style="width:100%;border-radius:8px">
-          </a>`).join("")}
-      </div>`;
-    });
-  }
-
-  if(tab==="news"){
-    content.innerHTML=`
-      <a href="https://news.google.com/search?q=${encodeURIComponent(q)}" target="_blank">Google News</a><br>
-      <a href="https://www.bing.com/news/search?q=${encodeURIComponent(q)}" target="_blank">Bing News</a>
-    `;
-  }
-}
-
-function runGoogle(q){
+function run(q){
   let tries=0;
   const t=setInterval(()=>{
     tries++;
@@ -206,7 +196,7 @@ function runGoogle(q){
       if(el) el.execute(q);
     }
     if(tries>80) clearInterval(t);
-  },150);
+  },120);
 }
 </script>
 
