--- a/index.html
+++ b/index.html
@@ -2,206 +2,140 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
-
-<link rel="icon" type="image/png" href="favicon.png">
-<link rel="manifest" href="manifest.json">
-
-<script>
-(function(){
-  if(window.document && window.document.documentMode){
-    window.location.replace("ie.html");
-  }
-})();
-</script>
-
 <title>Searchmas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#339933">
-
-<style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
-
-body{
-  background:
-    url('Santa.png') left center / 50% 100vh no-repeat,
-    url('Santa.png') right center / 50% 100vh no-repeat;
-}
-
-#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-
-.logo{font-size:clamp(48px,10vw,80px);font-weight:bold;}
-
-.logo span:nth-child(1){color:#4285f4}
-.logo span:nth-child(2){color:#ff9800}
-.logo span:nth-child(3){color:#fbbc05}
-.logo span:nth-child(4){color:#4285f4}
-.logo span:nth-child(5){color:#34a853}
-.logo span:nth-child(6){color:#ff9800}
-.logo span:nth-child(7){color:#fbbc05}
-.logo span:nth-child(8){color:#4285f4}
-.logo span:nth-child(9){color:#34a853}
-
-.search-box{max-width:580px;width:90%;padding:0 16px;}
-input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
-
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;background:#339933;}
-
-.topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;}
-.back{cursor:pointer;font-size:22px;margin-bottom:8px;color:white;}
-
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid rgba(255,255,255,.3);flex-wrap:wrap;}
-.tab{cursor:pointer;color:#d9ffd9;padding-bottom:8px;}
-.tab.active{color:#fff;border-bottom:3px solid #fff;}
-
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
-
-.card{
-  background:#2b7f2b;
-  border-radius:12px;
-  padding:14px 16px;
-  margin:12px 0;
-  cursor:pointer;
-  box-shadow:0 2px 6px rgba(0,0,0,.2);
-  color:white;
-  text-decoration:none;
-  display:flex;
-  flex-direction:column;
-  gap:6px;
-}
-
-/* Google results skin */
-.gsc-control-cse{background:#339933!important;border:none!important;}
-.gsc-webResult{background:#2b7f2b!important;border-radius:12px!important;margin:12px 0!important;padding:12px!important;}
-.gs-title a{color:white!important;}
-.gs-snippet{color:#d0ffd0!important;}
-</style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+
+<style>
+body{
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:#0e1a0e;
+  color:white;
+}
+
+header{
+  background:#cc0000;
+  padding:12px 16px;
+  font-size:22px;
+}
+
+#searchBox{
+  width:96%;
+  padding:12px;
+  font-size:18px;
+  border:none;
+  outline:none;
+  border-radius:6px;
+  margin:10px;
+}
+
+#tabs{
+  display:flex;
+  gap:6px;
+  padding:8px 10px;
+  background:#141414;
+}
+
+.tab{
+  padding:6px 14px;
+  border-radius:6px;
+  background:#222;
+  cursor:pointer;
+}
+
+.tab.active{
+  background:#cc0000;
+}
+
+#content{
+  padding:12px;
+}
+
+/* Google results greenish background */
+.gsc-control-cse{
+  background:#1f331f !important;
+  border-radius:12px;
+  padding:14px !important;
+}
+
+.gsc-webResult.gsc-result{
+  background:#233f23 !important;
+  border-radius:10px !important;
+  padding:12px !important;
+  margin:10px 0 !important;
+}
+
+.gs-title a{color:#9eff9e !important;}
+.gs-snippet{color:#ddffdd !important;}
+.gsc-result-info{color:#99cc99 !important;}
+
+iframe{
+  border:none;
+  width:100%;
+  height:75vh;
+  border-radius:12px;
+}
+</style>
 </head>
 
 <body>
 
-<div id="home">
-  <div class="logo">
-    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
-    <span>h</span><span>m</span><span>a</span><span>s</span>
-  </div>
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
+<header>Searchmas</header>
+
+<input id="searchBox" placeholder="Search..." onkeydown="if(event.key==='Enter') search()">
+
+<div id="tabs">
+  <div class="tab active" onclick="switchTab('all')">All</div>
+  <div class="tab" onclick="switchTab('images')">Images</div>
+  <div class="tab" onclick="switchTab('videos')">Videos</div>
+  <div class="tab" onclick="switchTab('news')">News</div>
 </div>
 
-<div id="results">
-  <div class="topbar">
-    <div class="back" onclick="goHome()">⬅</div>
-    <input id="qTop">
-  </div>
-
-  <div class="tabs">
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
-  </div>
-
-  <div id="content"></div>
-</div>
+<div id="content"></div>
 
 <script>
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+let currentTab="all";
 
-let tab="all";
-
-const homeEl=document.getElementById("home");
-const resEl=document.getElementById("results");
-const qHome=document.getElementById("qHome");
-const qTop=document.getElementById("qTop");
-const content=document.getElementById("content");
-
-const params=new URLSearchParams(location.search);
-const startQ=params.get("q");
-if(startQ) showResults(startQ);
-
-function startSearch(e){
-  e.preventDefault();
-  const q=qHome.value.trim();
-  if(!q) return;
-  history.pushState({}, "", "?q="+encodeURIComponent(q));
-  showResults(q);
-}
-
-qTop.onkeydown=e=>{
-  if(e.key==="Enter"){
-    e.preventDefault();
-    const q=qTop.value.trim();
-    if(!q) return;
-    history.pushState({}, "", "?q="+encodeURIComponent(q));
-    search();
-  }
-};
-
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    search();
-  };
-});
-
-function showResults(q){
-  homeEl.style.display="none";
-  resEl.style.display="block";
-  qTop.value=q;
+function switchTab(tab){
+  currentTab=tab;
+  document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));
+  event.target.classList.add('active');
   search();
 }
 
-function goHome(){
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display="none";
-  homeEl.style.display="flex";
-}
-
 function search(){
-  const q=qTop.value.trim();
-  if(!q) return;
+  let q=document.getElementById("searchBox").value.trim();
+  if(!q)return;
 
-  if(tab==="all" || tab==="images"){
-    content.innerHTML='<div class="gcse-searchresults-only"></div>';
-    runGoogle(q);
+  history.replaceState(null,"","?q="+encodeURIComponent(q));
+
+  let c=document.getElementById("content");
+
+  if(currentTab==="all"){
+    c.innerHTML='<div class="gcse-searchresults-only"></div>';
   }
 
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${encodeURIComponent(q)}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`
-          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-            <img src="${v.snippet.thumbnails.high.url}">
-          </a>`).join("")}</div>`;
-      });
+  if(currentTab==="images"){
+    c.innerHTML='<div class="gcse-searchresults-only"></div>';
   }
 
-  if(tab==="news"){
-    content.innerHTML=
-      `<a class="card" href="https://news.google.com/search?q=${encodeURIComponent(q)}" target="_blank">Google News</a>`+
-      `<a class="card" href="https://www.bing.com/news/search?q=${encodeURIComponent(q)}" target="_blank">Bing News</a>`;
+  if(currentTab==="videos"){
+    c.innerHTML='<iframe src="https://www.bing.com/videos/search?q='+encodeURIComponent(q)+'"></iframe>';
+  }
+
+  if(currentTab==="news"){
+    c.innerHTML='<iframe src="https://www.bing.com/news/search?q='+encodeURIComponent(q)+'"></iframe>';
   }
 }
 
-function runGoogle(q){
-  let tries=0;
-  const t=setInterval(()=>{
-    tries++;
-    if(window.google && google.search && google.search.cse){
-      clearInterval(t);
-      const el=google.search.cse.element.getElement("searchresults-only0");
-      if(el) el.execute(q);
-    }
-    if(tries>80) clearInterval(t);
-  },120);
+window.onload=()=>{
+  const p=new URLSearchParams(location.search);
+  if(p.has("q")){
+    document.getElementById("searchBox").value=p.get("q");
+    search();
+  }
 }
 </script>
 
